test/fail/issue-2471.mo
import Self "../fail/issue-2471";

module {}
